add pnpm and fix turbo

--- a/package.json
+++ b/package.json
@@ -85,5 +85,9 @@
     "vite": "^6.2.3",
     "vite-plugin-banner": "^0.8.0",
     "vitest": "^3.0.9"
-  }
+  },
+  "dependencies": {
+    "turbo": "^2.5.6"
+  },
+  "packageManager": "pnpm@10.17.0"
 }
